k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: masterino
  labels:
    app.kubernetes.io/part-of: masterino
    masterino.io/environment: production
  annotations:
    masterino.io/ack-cluster-id: c23ea84b986c446d5b3fa9227962e77f4
    masterino.io/ack-region: cn-shenzhen
