k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masterino-ingress
  labels:
    app.kubernetes.io/name: masterino
    app.kubernetes.io/part-of: masterino
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-buffering: 'off'
    nginx.ingress.kubernetes.io/proxy-request-buffering: 'off'
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /WW_verify_uSB5OnVf9BeWJX0U.txt {
        return 200 "uSB5OnVf9BeWJX0U";
        add_header Content-Type "text/plain";
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - masterino.bielcrystal.com
      secretName: 20261122bielcrystal.com
  rules:
    - host: masterino.bielcrystal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masterino
                port:
                  number: 3210
